added distinction for videos and channels

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
       <input type="text" class="js-query">
       <button type="submit">Search</button>
     </form>
-    <h2>Results</h2>
-    <div id="js-search-results">
+    <div id='res-panel'>
+      <h2>Results</h2>
+      <div id="js-search-results">
 
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="index.js"></script>
