--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title></title>
     <meta name="description" content="">
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
     <h1>YouTube Search</h1>
@@ -18,6 +18,7 @@
 
       </div>
     </div>
+  
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="index.js"></script>
   </body>
