--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
-    <h1>YouTube Search</h1>
+    <h1>You<span class="make-red">Tube</span> Search</h1>
     <form action="#" class="js-search-form">
       <label for="query"></label>
       <input type="text" class="js-query">
